--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- load angular and angular route via CDN -->
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.js"></script>
+  <script src="js/angular-sanitize.min.js"></script>
     <script src="script.js"></script>
+      <script src="js/dataservice.js"></script>
     <title ng-bind="'Dinesh- ' + title">myApp</title>
 </head>
 
@@ -25,14 +27,13 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">Dinesh Hakim</a>
                 </div>
-
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
                     <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-                    <li><a href="#experience"><i class="fa fa-experience"></i> Experience</a></li>
-                    <li><a href="#education"><i class="fa fa-comment"></i> Education</a></li>
-                    <li><a href="#Projects"><i class="fa fa-comment"></i> Projects</a></li>
+                    <li><a href="#experience"><i class="fa fa-signal"></i> Experience</a></li>
+                    <li><a href="#education"><i class="fa  fa-trophy"></i> Education</a></li>
+                    <li><a href="#Projects"><i class="fa fa-tasks"></i> Projects</a></li>
                     
                 </ul>
             </div>
