--- a/pages/home.html
+++ b/pages/home.html
@@ -1,17 +1,19 @@
 <!-- home.html -->
-<div class="jumbotron text-center">
-    <h2>About Me</h2>
-    <style type="text/css">
-        .preformatted {
-            white-space: pre;
-            display: block;
-            unicode-bidi: embed;
-            text-align: left;
-            margin-left: 10%;
-        }
-    </style>
+<section id="download" class="content-section text-center">
+    <div class="row">
+        <h2>About Me</h2>
+        <style type="text/css">
+            .preformatted {
+                white-space: pre;
+                display: block;
+                unicode-bidi: embed;
+                text-align: left;
+                margin-left: 10%;
+            }
+        </style>
 
-    <p class="preformatted" ng-bind-html="message">
-    </p>
+        <p class="preformatted" ng-bind-html="message">
+        </p>
 
-</div>
+    </div>
+</section>
