--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,9 @@
 <!-- about.html -->
-    <div class="jumbotron text-center">
+<section id="download" class="content-section text-center">
+    <div class="row">
+
         <h1>About Page</h1>
 
         <p>{{ message }}</p>
     </div>
+</section>
