--- a/pages/education.html
+++ b/pages/education.html
@@ -1,4 +1,4 @@
-<div section="section"  ng-repeat="item in items" class="col-md-8 col-md-offset-2">   
+<section id="education"  ng-repeat="item in items" class="col-md-8 col-md-offset-2">   
     <div class="col-xs-6 col-sm-1">
            <i class="fa fa-graduation-cap fa-5x" aria-hidden="true"></i>
     </div> 
@@ -7,4 +7,4 @@
         <h3 placeholder="School Name">{{item.name}}</h3>
         <h4 placeholder="Field of Study">{{item.fieldOfStudy}}</h4>
         
-</div>
+</section>
