--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <!-- home.html -->
-<section id="download" class="content-section text-center">
+<section id="home" class="content-section text-center">
     <div class="row">
         <h2>About Me</h2>
         <style type="text/css">
