--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,19 +1,18 @@
-<!-- contact.html -->
-<style type="text/css">
-
-</style>
 <section id="contact" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <h2>Connect to Me</h3>
      
-    <ul class="social-links list-inline banner-social-buttons" >
-         <li ng-repeat="item in items">  <a ng-href="{{item.link}}" class="btn btn-default btn-lg">
+            <ul class="social-links list-inline banner-social-buttons" >
+            <li ng-repeat="item in items">  
+                <a ng-href="{{item.link}}" class="btn btn-default btn-lg">
             
-            <i class="fa fa-{{item.name}} fa-fw"><span class="network-name"></span></i>
+                         <i class="fa fa-{{item.name}} fa-fw">
+                             <span class="network-name"></span>
+                </i>
             </a>
-       </li>
-        </ul>
+            </li>
+            </ul>
+        </div>
     </div>
-</div>
 </section>
