--- a/pages/education.html
+++ b/pages/education.html
@@ -1,10 +1,13 @@
-<section id="education"  ng-repeat="item in items" class="col-md-8 col-md-offset-2">   
-    <div class="col-xs-6 col-sm-1">
-           <i class="fa fa-graduation-cap fa-5x" aria-hidden="true"></i>
-    </div> 
-     <div class="col-xs-6 col-sm-7">
-        <h3 placeholder="years">{{item.years}}</h3>
-        <h3 placeholder="School Name">{{item.name}}</h3>
-        <h4 placeholder="Field of Study">{{item.fieldOfStudy}}</h4>
-        
+<section id="education"  class="content-section">
+    <h2>Education</h2>
+    <div ng-repeat="item in items" class="col-md-8 col-md-offset-2">
+        <div class="col-xs-6 col-sm-2">
+            <i class="fa fa-graduation-cap fa-5x" aria-hidden="true"></i>
+        </div>
+        <div class="col-xs-6 col-sm-8">
+            <h3 placeholder="years">{{item.years}}</h3>
+            <h3 placeholder="School Name">{{item.name}}</h3>
+            <h4 placeholder="Field of Study">{{item.fieldOfStudy}}</h4>
+        </div>
+    </div>
 </section>
