--- a/pages/experience.html
+++ b/pages/experience.html
@@ -1,10 +1,13 @@
-<section id="experience" ng-repeat="item in items" class="col-md-8 col-md-offset-2">
-    <div class="col-xs-6 col-sm-1">
-        <i class="fa fa-briefcase fa-5x" aria-hidden="true"></i>
+<section id="experience" class="content-section">
+    <h2>Experience</h2>
+   <div ng-repeat="item in items" class="col-md-8 col-md-offset-2">
+        <div class="col-xs-6 col-sm-2">
+            <i class="fa fa-graduation-cap fa-5x" aria-hidden="true"></i>
+        </div>
+        <div class="col-xs-6 col-sm-8">
+            <h3 placeholder="years">{{item.years}}</h3>
+            <h3 placeholder="School Name">{{item.name}}</h3>
+            <h4 placeholder="Field of Study">{{item.fieldOfStudy}}</h4>
+        </div>
     </div>
-    <div class="col-xs-6 col-sm-7">
-        <h3 placeholder="years">{{item.years}}</h3>
-        <h3 placeholder="School Name">{{item.name}}</h3>
-        <h4 placeholder="Field of Study">{{item.position}}</h4>
-        <h4 placeholder="Field of Study">{{item.description}}</h4>
 </section>
