--- a/pages/experience.html
+++ b/pages/experience.html
@@ -1,13 +1,47 @@
-<section id="experience" class="content-section">
-    <h2>Experience</h2>
-   <div ng-repeat="item in items" class="col-md-8 col-md-offset-2">
-        <div class="col-xs-6 col-sm-2">
+<style type="text/css">
+    .experiences {
+        padding: 0;
+    }
+    
+    .box-content {
+        float: left;
+        padding: 100px 0;
+        width: 100%;
+    }
+    h2 span.data {
+    float: right;
+    font-family: "Open sans",sans-serif;
+    font-style: italic;
+    font-weight: 400;
+}
+</style>
+<div class="row">
+    <div class="col-md-12">
+        <div class="box-content experiences">
+            <h2>Experience</h2>
+            <div ng-repeat="item in items" class="col-md-8">
+                <!--<div class="col-xs-6 col-sm-2">
             <i class="fa fa-graduation-cap fa-5x" aria-hidden="true"></i>
         </div>
         <div class="col-xs-6 col-sm-8">
             <h3 placeholder="years">{{item.years}}</h3>
             <h3 placeholder="School Name">{{item.name}}</h3>
             <h4 placeholder="Field of Study">{{item.fieldOfStudy}}</h4>
+        </div>-->
+                <div class="col-md-12 list-experiences">
+                    <h2>
+<i class="fa fa-briefcase"></i>
+Front-End Developer
+<span class="data">2013 - 2015</span>
+</h2>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Prae sent non sem
+                        eu mi malesuada viverra volutpat ut libero. Nullam a venenatis tellus. Nam fen convallis tristique.
+                        In imperdiet est sed aliquet imperdiet. </p>
+                </div>
+            </div>
+
+
         </div>
     </div>
-</section>
+</div>
+
