--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/grayscale.js"></script>
     
-    <title ng-bind="'Dinesh- ' + title">myApp</title>
+    <title ng-bind="'Dinesh- ' + title"></title>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" ng-controller="mainController">
