--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
      
             <ul class="social-links list-inline banner-social-buttons" >
             <li ng-repeat="item in items">  
-                <a ng-href="{{item.link}}" class="btn btn-default btn-lg">
+                <a ng-href="{{item.link}}"  target="_blank"  class="btn btn-default btn-lg">
             
                          <i class="fa fa-{{item.name}} fa-fw">
                              <span class="network-name"></span>
